--- a/cms_people/templates/cms_people/profile.html
+++ b/cms_people/templates/cms_people/profile.html
@@ -1,7 +1,9 @@
 {% extends "cms_people/base.html" %}
+{% load sekizai_tags %}
 
 {% block main %}
     {% block form %}
         {{ form }}
+        {{ form.media.js }}
     {% endblock %}
 {% endblock %}
