--- a/cms_people/templates/cms_people/address.html
+++ b/cms_people/templates/cms_people/address.html
@@ -15,4 +15,24 @@
 {% block bs3_theme_js %}
     {{ block.super }}
     {{ form.media.js }}
+    <script>
+        function csrfSafeMethod(method) {
+            // these HTTP methods do not require CSRF protection
+            return (/^(GET|HEAD|OPTIONS|TRACE)$/.test(method));
+        }
+
+        $.ajaxSetup({
+            beforeSend: function(xhr, settings) {
+                if (!csrfSafeMethod(settings.type) && !this.crossDomain) {
+                    xhr.setRequestHeader("X-CSRFToken", "{{ csrf_token }}");
+                }
+            }
+        });
+
+        $(function () {
+            $('#id_city').change(function () {
+                $.post("{% url "dataType" %}", {city: $('#id_city').val()});
+            });
+        });
+    </script>
 {% endblock %}
