Sort by main country.

--- a/cms_people/templates/cms_people/address.html
+++ b/cms_people/templates/cms_people/address.html
@@ -30,7 +30,7 @@
         });
 
         $(function () {
-            $('#id_city').change(function () {
+            $('#id_city').on('select2:select', function () {
                 $.post("{% url "dataType" %}", {city: $('#id_city').val()});
             });
         });
