--- a/cms_people/templates/cms_people/address.html
+++ b/cms_people/templates/cms_people/address.html
@@ -16,23 +16,8 @@
     {{ block.super }}
     {{ form.media.js }}
     <script>
-        function csrfSafeMethod(method) {
-            // these HTTP methods do not require CSRF protection
-            return (/^(GET|HEAD|OPTIONS|TRACE)$/.test(method));
-        }
-
-        $.ajaxSetup({
-            beforeSend: function(xhr, settings) {
-                if (!csrfSafeMethod(settings.type) && !this.crossDomain) {
-                    xhr.setRequestHeader("X-CSRFToken", "{{ csrf_token }}");
-                }
-            }
-        });
-
-        $(function () {
-            $('#id_city').on('select2:select', function () {
-                $.post("{% url "dataType" %}", {city: $('#id_city').val()});
-            });
-        });
+        dataType = "{% url "dataType" %}";
+        csrfToken = "{{ csrf_token }}"
     </script>
+    <script src="{% static "cms_contact/src/js/address.js" %}" type="text/javascript"></script>
 {% endblock %}
