--- a/cms_people/templates/cms_people/address.html
+++ b/cms_people/templates/cms_people/address.html
@@ -2,6 +2,8 @@
 {% load sekizai_tags static %}
 
 {% block form %}
+    <iframe width="425" height="350" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" id="map"
+            src="http://www.openstreetmap.org/export/embed.html?bbox=-3.357696533203125%2C36.58520897112158%2C-2.21099853515625%2C37.082023438186766&amp;layer=cyclemap&marker=51.89297,-8.49417" style="border: 1px solid black"></iframe><br/><small><a href="http://www.openstreetmap.org/#map=11/36.8340/-2.7843&amp;layers=C">View Larger Map</a></small>
     {{ form }}
 {% endblock %}
 
