--- a/cms_people/templates/cms_people/base.html
+++ b/cms_people/templates/cms_people/base.html
@@ -1,8 +1,16 @@
 {% extends "cms_bs3_theme/fullwidth.html" %}
 
 {% block content %}
-    <div class="container">
-    {% block main %}
+    {% block top %}
     {% endblock %}
+    <div class="container">
+        <div class="col-md-6">
+            {% block sidebar_left %}
+            {% endblock %}
+        </div>
+        <div class="col-md-18">
+            {% block main %}
+            {% endblock %}
+        </div>
     </div>
 {% endblock %}
