--- a/cms_people/templates/cms_people/profile.html
+++ b/cms_people/templates/cms_people/profile.html
@@ -1,6 +1,15 @@
 {% extends "cms_people/base.html" %}
 {% load sekizai_tags %}
 
+{% block sidebar_left %}
+    <ul class="nav nav-pills nav-stacked">
+      <li class="active"><a href="#">Home</a></li>
+      <li><a href="#">Menu 1</a></li>
+      <li><a href="#">Menu 2</a></li>
+      <li><a href="#">Menu 3</a></li>
+    </ul>
+{% endblock %}
+
 {% block main %}
     {% block form %}
         {{ form }}
