--- a/cms_people/templates/cms_people/profile.html
+++ b/cms_people/templates/cms_people/profile.html
@@ -1,10 +1,11 @@
 {% extends "cms_people/base.html" %}
-{% load sekizai_tags %}
+{% load sekizai_tags i18n static %}
+
 
 {% block sidebar_left %}
     <ul class="nav nav-pills nav-stacked">
-      <li class="active"><a href="#">Home</a></li>
-      <li><a href="#">Menu 1</a></li>
+      <li class="active"><a href="{% url "profile_about" %}">{% trans "About me" %}</a></li>
+      <li><a href="{% url "profile_address" %}">{% trans "Address" %}</a></li>
       <li><a href="#">Menu 2</a></li>
       <li><a href="#">Menu 3</a></li>
     </ul>
@@ -15,4 +16,9 @@
         {{ form }}
         {{ form.media.js }}
     {% endblock %}
+{% endblock %}
+
+{% block bs3_theme_css %}
+    {{ block.super }}
+    <link rel="stylesheet" href="{% static 'cms_people/src/css/people.css' %}">
 {% endblock %}
