Profile urls fixed and dynamic profile menu.

--- a/cms_people/templates/cms_people/base.html
+++ b/cms_people/templates/cms_people/base.html
@@ -1,7 +1,7 @@
 {% extends "cms_bs3_theme/fullwidth.html" %}
 
 {% block content %}
-    <div id="profile-{% block profile_page %}{% endblock %}">
+    <div id="{% block content_id %}{% endblock %}">
         {% block top %}
         {% endblock %}
         <div class="container">
