Password match validation.

--- a/cms_people/templates/cms_people/profile.html
+++ b/cms_people/templates/cms_people/profile.html
@@ -2,6 +2,7 @@
 {% load sekizai_tags i18n static %}
 
 
+{% block content_id %}profile-{{ profile_tab }}{% endblock %}
 
 {% block sidebar_left %}
     <ul class="nav nav-pills nav-stacked">
