Disable dynamically change password input.

--- a/cms_people/templates/cms_people/security.html
+++ b/cms_people/templates/cms_people/security.html
@@ -41,4 +41,5 @@
 {% block bs3_theme_js %}
     {{ block.super }}
     {{ form.media.js }}
+    <script type="text/javascript" src="{% static 'cms_people/src/js/security.js' %}"></script>
 {% endblock %}
