Avatar preview before submit.

--- a/cms_people/static/cms_people/src/scss/people.scss
+++ b/cms_people/static/cms_people/src/scss/people.scss
@@ -10,6 +10,9 @@
         height: 140px;
         border: 1px solid #c0c0c0;
         background-color: #E5E6E4;
+        background-size: cover;
+        background-position: center;
+        cursor: pointer;
 
         align-items: center;
         display: flex;
