--- a/cms_people/templates/cms_people/about.html
+++ b/cms_people/templates/cms_people/about.html
@@ -17,4 +17,5 @@
 {% block bs3_theme_js %}
     {{ block.super }}
     {{ form.media.js }}
+    <script type="text/javascript" src="{% static 'cms_people/src/js/about.js' %}"></script>
 {% endblock %}
