--- a/cms_people/static/cms_people/src/scss/people.scss
+++ b/cms_people/static/cms_people/src/scss/people.scss
@@ -1,31 +1,48 @@
-.avatar {
+#profile-about {
+    .avatar {
 
-    border: 1px solid #dddddd;
-    display: inline-block;
-    padding: 4px;
-    border-radius: 3px;
+        border: 1px solid #dddddd;
+        display: inline-block;
+        padding: 4px;
+        border-radius: 3px;
 
-    div {
-        width: 140px;
-        height: 140px;
-        border: 1px solid #c0c0c0;
-        background-color: #E5E6E4;
-        background-size: cover;
-        background-position: center;
-        cursor: pointer;
+        div {
+            width: 140px;
+            height: 140px;
+            border: 1px solid #c0c0c0;
+            background-color: #E5E6E4;
+            background-size: cover;
+            background-position: center;
+            cursor: pointer;
 
-        align-items: center;
-        display: flex;
-        justify-content: center;
+            align-items: center;
+            display: flex;
+            justify-content: center;
 
-        .glyphicon {
-            color: #ffffff;
-            font-size: 80px;
+            .glyphicon {
+                color: #ffffff;
+                font-size: 80px;
+            }
         }
     }
 
-}
+    .username {
+        font-size: 400%;
 
+        .label {
+            font-size: 40%;
+            vertical-align: middle;
+        }
+    }
+
+    .since {
+        font-size: 150%;
+    }
+
+    #id_avatar {
+        display: none;
+    }
+}
 
 #profile-security {
     .submit-inline {
