--- a/cms_people/templates/cms_people/address.html
+++ b/cms_people/templates/cms_people/address.html
@@ -8,7 +8,7 @@
 {% endblock %}
 
 {% block form %}
-    <form class="form-horizontal">
+    <form class="form-horizontal" action="{% url 'profile_address' %}" method="post">
         <h2 class="col-md-offset-6">Address</h2>
         {% bootstrap_form_errors form %}
         {% bootstrap_field form.street layout='horizontal' %}
