--- a/cms_people/templates/cms_people/about.html
+++ b/cms_people/templates/cms_people/about.html
@@ -1,5 +1,5 @@
 {% extends "cms_people/profile.html" %}
-{% load sekizai_tags static bootstrap3 i18n %}
+{% load sekizai_tags static bootstrap3 i18n formset_tags %}
 
 {% block form %}
     <form>
@@ -34,14 +34,56 @@
             {% bootstrap_field form.interests layout='horizontal' %}
             {% bootstrap_field form.bio layout='horizontal' %}
             {{ form.avatar }}
-            {% bootstrap_button "submit" button_class="col-md-offset-6 btn-primary" size="lg" %}
         </div>
+        <div id="formset" data-formset-prefix="{{ formset.prefix }}" class="form-inline">
+            {{ formset.management_form }}
+
+            <div data-formset-body>
+                <!-- New forms will be inserted in here -->
+                {% for form in formset %}
+                    <div data-formset-form>
+                        {% bootstrap_field form.type layout='inline' %}
+                        {% bootstrap_field form.value layout='inline' %}
+                        {% bootstrap_field form.DELETE layout='inline' %}
+                        <button type="button" data-formset-delete-button>Delete form</button>
+                    </div>
+                {% endfor %}
+            </div>
+
+            <!-- The empty form template. By wrapping this in a <script> tag, the
+            __prefix__ placeholder can easily be replaced in both attributes and
+            any scripts -->
+            <script type="form-template" data-formset-empty-form>
+                {% escapescript %}
+                    <div data-formset-form>
+                        {% bootstrap_field formset.empty_form.type layout='inline' %}
+                        {% bootstrap_field formset.empty_form.value layout='inline' %}
+                        {% bootstrap_field formset.empty_form.DELETE layout='inline' %}
+                        <button type="button" data-formset-delete-button>Delete form</button>
+                    </div>
+                {% endescapescript %}
+            </script>
+
+            <!-- This button will add a new form when clicked -->
+            <input type="button" value="Add another" data-formset-add>
+        </div>
+
+
+        {% bootstrap_button "submit" button_class="col-md-offset-6 btn-primary" size="lg" %}
+
     </form>
 {% endblock %}
 
 
+{% block bs3_theme_css %}
+    {{ block.super }}
+    <link href="//cdnjs.cloudflare.com/ajax/libs/select2/4.0.3/css/select2.min.css" rel="stylesheet" />
+{% endblock %}
+
 {% block bs3_theme_js %}
     {{ block.super }}
     {{ form.media.js }}
+    <script type="text/javascript" src="{% static 'pywebes/src/libs/select2/dist/js/select2.js' %}"></script>
+    <script src="{{ STATIC_URL }}js/jquery.formset.js"></script>
     <script type="text/javascript" src="{% static 'cms_people/src/js/about.js' %}"></script>
 {% endblock %}
