--- a/cms_people/static/cms_people/src/scss/people.scss
+++ b/cms_people/static/cms_people/src/scss/people.scss
@@ -42,6 +42,16 @@
     #id_avatar {
         display: none;
     }
+
+    [data-formset-form-deleted] {
+        display: none;
+    }
+
+    .delete {
+        cursor: pointer;
+    }
+
+
 }
 
 #profile-security {
