--- a/cms_people/static/cms_people/src/scss/people.scss
+++ b/cms_people/static/cms_people/src/scss/people.scss
@@ -1,46 +1,67 @@
+#profile-about, #profile-security {
+    padding-top: 40px;
+}
+
+#profile-about .btn-primary, #profile-address .btn-primary {
+    margin-top: 30px;
+    border-radius: 3px;
+}
+
 #profile-about {
-    .avatar {
+    .card {
+        padding-bottom: 20px;
 
-        border: 1px solid #dddddd;
-        display: inline-block;
-        padding: 4px;
-        border-radius: 3px;
+        .avatar {
+            border: 1px solid #dddddd;
+            display: inline-block;
+            padding: 4px;
+            border-radius: 3px;
 
-        div {
-            width: 140px;
-            height: 140px;
-            border: 1px solid #c0c0c0;
-            background-color: #E5E6E4;
-            background-size: cover;
-            background-position: center;
-            cursor: pointer;
+            div {
+                width: 140px;
+                height: 140px;
+                border: 1px solid #c0c0c0;
+                background-color: #E5E6E4;
+                background-size: cover;
+                background-position: center;
+                cursor: pointer;
 
-            align-items: center;
-            display: flex;
-            justify-content: center;
+                align-items: center;
+                display: flex;
+                justify-content: center;
 
-            .glyphicon {
-                color: #ffffff;
-                font-size: 80px;
+                .glyphicon {
+                    color: #ffffff;
+                    font-size: 80px;
+                }
             }
         }
-    }
 
-    .username {
-        font-size: 400%;
+        .username {
+            font-size: 400%;
 
-        .label {
-            font-size: 40%;
-            vertical-align: middle;
+            .label {
+                font-size: 40%;
+                vertical-align: middle;
+            }
+        }
+
+        .since {
+            font-size: 150%;
         }
     }
 
-    .since {
-        font-size: 150%;
-    }
+
 
     #id_avatar {
+        // Real input to hide
         display: none;
+    }
+
+    // Coms & Social
+    [data-formset-form] {
+        padding-top: 3px;
+        padding-bottom: 3px;
     }
 
     [data-formset-form-deleted] {
@@ -50,8 +71,6 @@
     .delete {
         cursor: pointer;
     }
-
-
 }
 
 #profile-security {
@@ -59,5 +78,12 @@
         .help-block {
             clear: both;
         }
+    }
+}
+
+#profile-address {
+    .horizontal-inline > div {
+        padding-left: 0;
+        padding-right: 0;
     }
 }
