--- a/cms_people/templates/cms_people/about.html
+++ b/cms_people/templates/cms_people/about.html
@@ -4,7 +4,7 @@
 {% block form %}
     <form action="{% url 'profile_about' %}" method="post" enctype="multipart/form-data">
         {% csrf_token %}
-        <div class="row">
+        <div class="row card">
             <div class="col-md-6">
                 <div class="avatar pull-right">
                     <div{% if object.avatar %}
@@ -38,39 +38,41 @@
             {% bootstrap_field form.bio layout='horizontal' %}
             <div class="hidden">{{ form.avatar }}</div>
         </div>
-        <div id="formset" data-formset-prefix="{{ formset.prefix }}" class="form-inline">
-            {{ formset.management_form }}
+        <div class="row">
+            <div id="formset" data-formset-prefix="{{ formset.prefix }}" class="form-inline col-md-18 col-md-offset-6">
+                <h3>{% trans "Coms & Social" %}</h3>
+                {{ formset.management_form }}
 
-            <div data-formset-body>
-                <!-- New forms will be inserted in here -->
-                {% for form in formset %}
-                    <div data-formset-form>
-                        {% bootstrap_field form.id layout='inline' %}
-                        {% bootstrap_field form.type layout='inline' %}
-                        {% bootstrap_field form.value layout='inline' %}
-                        <div class="hidden">{{ form.DELETE }}</div>
-                        <span class="glyphicon glyphicon-remove text-danger delete"
-                              data-formset-delete-button></span>
-                    </div>
-                {% endfor %}
+                <div data-formset-body>
+                    <!-- New forms will be inserted in here -->
+                    {% for form in formset %}
+                        <div data-formset-form>
+                            {% bootstrap_field form.id layout='inline' %}
+                            {% bootstrap_field form.type layout='inline' %}
+                            {% bootstrap_field form.value layout='inline' %}
+                            <div class="hidden">{{ form.DELETE }}</div>
+                            <span class="glyphicon glyphicon-remove text-danger delete"
+                                  data-formset-delete-button></span>
+                        </div>
+                    {% endfor %}
+                </div>
+
+                <!-- The empty form template. By wrapping this in a <script> tag, the
+                __prefix__ placeholder can easily be replaced in both attributes and
+                any scripts -->
+                <script type="form-template" data-formset-empty-form>
+                    {% escapescript %}
+                        <div data-formset-form>
+                            {% bootstrap_field formset.empty_form.type layout='inline' %}
+                            {% bootstrap_field formset.empty_form.value layout='inline' %}
+                            <div class="hidden">{{ formset.empty_form.DELETE }}</div>
+                            <span class="glyphicon glyphicon-remove text-danger delete"
+                                  data-formset-delete-button></span>
+                        </div>
+                    {% endescapescript %}
+                </script>
             </div>
-
-            <!-- The empty form template. By wrapping this in a <script> tag, the
-            __prefix__ placeholder can easily be replaced in both attributes and
-            any scripts -->
-            <script type="form-template" data-formset-empty-form>
-                {% escapescript %}
-                    <div data-formset-form>
-                        {% bootstrap_field formset.empty_form.type layout='inline' %}
-                        {% bootstrap_field formset.empty_form.value layout='inline' %}
-                        <div class="hidden">{{ formset.empty_form.DELETE }}</div>
-                        <span class="glyphicon glyphicon-remove text-danger delete"
-                              data-formset-delete-button></span>
-                    </div>
-                {% endescapescript %}
-            </script>
         </div>
-
 
         {% bootstrap_button "submit" button_class="col-md-offset-6 btn-primary" size="lg" %}
 
