--- a/cms_people/templates/cms_people/address.html
+++ b/cms_people/templates/cms_people/address.html
@@ -1,5 +1,5 @@
 {% extends "cms_people/profile.html" %}
-{% load sekizai_tags static bootstrap3 %}
+{% load sekizai_tags static bootstrap3 i18n %}
 
 {% block top %}
     <iframe width="100%" height="250" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" id="map"
@@ -9,16 +9,20 @@
 
 {% block form %}
     <form class="form-horizontal" action="{% url 'profile_address' %}" method="post">
-        <h2 class="col-md-offset-6">Address</h2>
-        {% csrf_token %}
-        {% bootstrap_form_errors form %}
-        {% bootstrap_field form.street layout='horizontal' %}
-        {% bootstrap_field form.city layout='horizontal' %}
-        {% bootstrap_field form.subregion layout='horizontal' %}
-        {% bootstrap_field form.region layout='horizontal' %}
-        {% bootstrap_field form.custom_postal_code layout='horizontal' form_group_class='col-md-12' label_class='col-md-12' field_class='col-md-12' %}
-        {% bootstrap_field form.country layout='horizontal' form_group_class='col-md-12' %}
-        {% bootstrap_button "submit" button_class="col-md-offset-6 btn-primary" size="lg" %}
+        <div class="row">
+            <h2 class="col-md-offset-6">{% trans "Address" %}</h2>
+            {% csrf_token %}
+            {% bootstrap_form_errors form %}
+            {% bootstrap_field form.street layout='horizontal' %}
+            {% bootstrap_field form.city layout='horizontal' %}
+            {% bootstrap_field form.subregion layout='horizontal' %}
+            {% bootstrap_field form.region layout='horizontal' %}
+            <div class="form-group horizontal-inline">
+                {% bootstrap_field form.custom_postal_code layout='horizontal' form_group_class='col-md-12' label_class='col-md-12' field_class='col-md-12' %}
+                {% bootstrap_field form.country layout='horizontal' form_group_class='col-md-12' %}
+            </div>
+            {% bootstrap_button "submit" button_class="col-md-offset-6 btn-primary" size="lg" %}
+        </div>
     </form>
 {% endblock %}
 
