--- a/cms_people/templates/cms_people/security.html
+++ b/cms_people/templates/cms_people/security.html
@@ -7,6 +7,7 @@
         <div class="form-horizontal">
             {% trans "The current password is required to change the email or password." as help %}
             {% bootstrap_alert help %}
+            <h2 class="col-md-offset-6">{% trans "Email and password" %}</h2>
             {% bootstrap_form_errors form %}
             {% bootstrap_field form.email layout='horizontal' %}
             {% bootstrap_field form.change_password layout='horizontal' %}
