--- a/cms_people/static/cms_people/src/scss/people.scss
+++ b/cms_people/static/cms_people/src/scss/people.scss
@@ -1,8 +1,8 @@
-#profile-about, #profile-security {
+#profile-about, #profile-security, #profile-privacy {
     padding-top: 40px;
 }
 
-#profile-about .btn-primary, #profile-address .btn-primary {
+#profile-about .btn-primary, #profile-address .btn-primary, #profile-privacy .btn-primary {
     margin-top: 30px;
     border-radius: 3px;
 }
