--- a/cms_people/templates/cms_people/card.html
+++ b/cms_people/templates/cms_people/card.html
@@ -1,6 +1,6 @@
 {% load i18n %}
-<div class="row card">
-    <div class="col-md-6">
+<div class="row card{% if include_real_name %} include-real-name{% endif %}">
+    <div class="{{ left_col_class|default:'col-md-6' }}">
         <div class="avatar pull-right">
             <div{% if object.avatar %}
                 style="background-image: url('{{ object.avatar.url }}');"{% endif %}>
@@ -9,7 +9,7 @@
             </div>
         </div>
     </div>
-    <div class="col-md-18">
+    <div class="{{ right_col_class|default:'col-md-18' }}">
         <h1 class="username">
             {{ view.request.user.username }}
             {% if view.request.user.is_staff %}
@@ -17,10 +17,10 @@
             {% endif %}
         </h1>
         {% if include_real_name %}
-        <p>
-            <span class="first_name" title="{% trans "First name" %}">{{ object.user.first_name }}</span>
-            <span class="last_name" title="{% trans "Last name" %}">{{ object.user.last_name }}</span>
-        </p>
+            <p class="real-name">
+                <span class="first_name text-info" title="{% trans "First name" %}">{{ object.user.first_name }}</span>
+                <span class="last_name text-primary" title="{% trans "Last name" %}">{{ object.user.last_name }}</span>
+            </p>
         {% endif %}
         <p>
             <span class="text-muted since">
