--- a/cms_people/static/cms_people/src/scss/people.scss
+++ b/cms_people/static/cms_people/src/scss/people.scss
@@ -1,46 +1,9 @@
-#profile-about, #profile-security, #profile-privacy {
-    padding-top: 40px;
-}
+$top: 50px;
 
-#profile-about .btn-primary, #profile-address .btn-primary, #profile-privacy .btn-primary {
-    margin-top: 30px;
-    border-radius: 3px;
-}
-
-#profile-about {
-    @import "card";
-
-    #id_avatar {
-        // Real input to hide
-        display: none;
-    }
-
-    // Coms & Social
-    [data-formset-form] {
-        padding-top: 3px;
-        padding-bottom: 3px;
-    }
-
-    [data-formset-form-deleted] {
-        display: none;
-    }
-
-    .delete {
-        cursor: pointer;
-    }
-}
-
-#profile-security {
-    .submit-inline {
-        .help-block {
-            clear: both;
-        }
-    }
-}
-
-#profile-address {
-    .horizontal-inline > div {
-        padding-left: 0;
-        padding-right: 0;
-    }
+#mapid {
+    position: absolute;
+    bottom: 0;
+    top: $top;
+    left: 0;
+    right: 0;
 }
