--- a/cms_people/static/cms_people/src/scss/people.scss
+++ b/cms_people/static/cms_people/src/scss/people.scss
@@ -7,3 +7,42 @@ $top: 50px;
     left: 0;
     right: 0;
 }
+
+#results {
+    width: 350px;
+    height: 350px;
+    position: fixed;
+    right: 20px;
+    bottom: 20px;
+    z-index: 10000;
+
+    .panel {
+        width: 100%;
+        height: 100%;
+    }
+
+    a {
+        text-decoration: none;
+    }
+
+    .avatar {
+        border: 1px solid #dddddd;
+        display: inline-block;
+        padding: 2px;
+        border-radius: 3px;
+
+        div {
+            width: 64px;
+            height: 64px;
+            border: 1px solid #c0c0c0;
+            background-color: #E5E6E4;
+            background-size: cover;
+            background-position: center;
+
+            align-items: center;
+            display: flex;
+            justify-content: center;
+        }
+    }
+}
+
