--- a/cms_people/templates/cms_people/person.html
+++ b/cms_people/templates/cms_people/person.html
@@ -5,7 +5,7 @@
     <div class="container" id="person">
         <div class="row">
             <div class="col-md-14 col-sm-offset-2">
-                {% include "cms_people/card.html" with include_real_name=real_name_privacy left_col_class="col-md-6" right_col_class="col-md-18" %}
+                {% include "cms_people/includes/card.html" with include_real_name=real_name_privacy left_col_class="col-md-6" right_col_class="col-md-18" %}
             </div>
         </div>
         <div class="row">
